# PnC

./: '  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Configuration.hpp  LICENSE  README.md  \  ]  config.h.cmake  install.sh  mingyo.yml  pnc.yml  py37.yml  todo.txt
ADE/: CMakeLists.txt  DracoSim.cpp  DracoSim.hpp  DracoWrapper.cpp  DracoWrapper.hpp  Main.cpp  ScorpioWorldNode.cpp
Addition/DataManager/: CMakeLists.txt  DataProtocol.h  DataSave.cpp  DataSave.h  Status_Display.cpp  data_protocol.h
Bindings/PnC/: A1InterfacePy.cpp  CMakeLists.txt  ConvexMPCPy.cpp  DracoInterfacePy.cpp  FixedAtlasInterfacePy.cpp
ExternalSource/myYaml/: CMakeLists.txt
Filters/: CMakeLists.txt
Filters/Basic/: filters.cpp
Filters/Kalman/: ExtendedKalmanFilter.hpp  KalmanFilterBase.hpp  LinearizedMeasurementModel.hpp  LinearizedSystemModel.hpp  MeasurementModel.hpp  SquareRootBase.hpp  SquareRootExtendedKalmanFilter.hpp  SquareRootFilterBase.hpp  SquareRootUnscentedKalmanFilter.hpp  StandardBase.hpp  StandardFilterBase.hpp  SystemModel.hpp  Types.hpp  UnscentedKalmanFilter.hpp  UnscentedKalmanFilterBase.hpp
Geometry/Polytope/: CMakeLists.txt  LownerJohnEllipsoid.cpp  LownerJohnEllipsoid.hpp  Polytope.cpp  Polytope.h  typedefs.h
PnC/: CMakeLists.txt  ControlArchitecture.hpp  Controller.hpp  EnvInterface.hpp  FootStepPlanner.hpp  Interface.hpp  InterruptLogic.hpp  Planner.hpp  StateMachine.hpp  TaskAndForceContainer.hpp  Test.hpp  TrajectoryManagerBase.hpp  base_quat
PnC/A1PnC/: A1Definition.hpp  A1Interface.cpp  A1Interface.hpp  A1StateEstimator.cpp  A1StateEstimator.hpp  A1StateProvider.cpp  A1StateProvider.hpp  CMakeLists.txt  com_pos
PnC/AtlasPnC/: AtlasControlArchitecture.cpp  AtlasControlArchitecture.hpp  AtlasController.cpp  AtlasController.hpp  AtlasDefinition.hpp  AtlasInterface.cpp  AtlasInterface.hpp  AtlasInterruptLogic.cpp  AtlasInterruptLogic.hpp  AtlasStateEstimator.cpp  AtlasStateEstimator.hpp  AtlasStateProvider.cpp  AtlasStateProvider.hpp  AtlasTCIContainer.cpp  AtlasTCIContainer.hpp  CMakeLists.txt
PnC/BipedGaitCycle/: BipedGaitCycle.cpp  BipedGaitCycle.hpp  CMakeLists.txt  test_gait_cycle.cpp
PnC/CartPolePnC/: CMakeLists.txt  CartPoleDataGen.py  CartPoleDefinition.hpp  CartPoleInterface.cpp  CartPoleInterface.hpp
PnC/CentroidPlanner/: CMakeLists.txt  CentroidPlanner.cpp  CentroidPlanner.hpp  ContactPlanInterface.hpp  ContactState.hpp  DynamicsState.hpp  InvKinPlanner.cpp  InvKinPlanner.hpp  KinematicsPlanner.cpp  KinematicsPlanner.hpp
PnC/Contact/: CMakeLists.txt  Contact.cpp  Contact.hpp
PnC/ConvexMPC/: CMakeLists.txt  ConvexMPC.cpp  ConvexMPC.hpp  GaitScheduler.cpp  GaitScheduler.hpp  test_cmpc.cpp
PnC/DracoHipPnC/: CMakeLists.txt  DracoHipInterface.cpp  DracoHipInterface.hpp
PnC/DracoPnC/: CMakeLists.txt  DracoDefinition.hpp  DracoInterface.cpp  DracoInterface.hpp  DracoMoCapManager.cpp  DracoMoCapManager.hpp  DracoStateEstimator.cpp  DracoStateEstimator.hpp  DracoStateProvider.cpp  DracoStateProvider.hpp
PnC/Filter/: CMakeLists.txt
PnC/FixedAtlasPnC/: CMakeLists.txt  FixedAtlasInterface.cpp  FixedAtlasInterface.hpp
PnC/FixedDracoPnC/: CMakeLists.txt  FixedDracoDefinition.hpp  FixedDracoInterface.cpp  FixedDracoInterface.hpp
PnC/GaitCycle/: CMakeLists.txt  GaitCycle.cpp  GaitCycle.hpp  test_gait_cycle.cpp
PnC/LaikagoPnC/: CMakeLists.txt  LaikagoDefinition.hpp  LaikagoInterface.cpp  LaikagoInterface.hpp  LaikagoStateEstimator.cpp  LaikagoStateEstimator.hpp  LaikagoStateProvider.cpp  LaikagoStateProvider.hpp
PnC/MPC/: CMPC.cpp  CMPC.hpp  CMakeLists.txt  MPCDesiredTrajectoryManager.cpp  MPCDesiredTrajectoryManager.hpp  ReactionForceSchedule.cpp  ReactionForceSchedule.hpp  run_test_mpc_gait_cycle.cpp  run_test_mpc_toy.cpp  test_mpc.cpp  test_mpc_trajectory_manager.cpp
PnC/NeuralNetwork/: CMakeLists.txt  NeuralNetModel.cpp  NeuralNetModel.hpp
PnC/PendulumPnC/: CMakeLists.txt  PendulumInterface.cpp  PendulumInterface.hpp
PnC/Planner/: CMakeLists.txt  DCMPlanner.cpp  DCMPlanner.hpp  Footstep.cpp  Footstep.hpp
PnC/PlannerSet/: CMakeLists.txt
PnC/ReinforcementLearning/: CMakeLists.txt  NeuralNetModel.cpp  NeuralNetModel.hpp  PPO.py  ProcessManager.py
PnC/RobotSystem/: CMakeLists.txt  CentroidModel.hpp  DartRobotSystem.cpp  DartRobotSystem.hpp  LinearInvertedPendulumModel.hpp  RobotSystem.cpp  RobotSystem.hpp
PnC/Scorpio2PnC/: CMakeLists.txt  ScorpioDefinition.hpp  ScorpioInterface.cpp  ScorpioInterface.hpp  ScorpioStateProvider.cpp  ScorpioStateProvider.hpp
PnC/ScorpioPnC/: CMakeLists.txt  OSCPosCtrl.cpp  OSCPosCtrl.hpp  OSCTest.cpp  OSCTest.hpp  ScorpioDefinition.hpp  ScorpioInterface.cpp  ScorpioInterface.hpp  ScorpioStateProvider.cpp  ScorpioStateProvider.hpp
RobotSystem/: .gitattributes  CMakeLists.txt  CentroidModel.hpp  RobotSystem.cpp  RobotSystem.hpp
UnitTest/: CMakeLists.txt  TestDummy.cpp  TestMyGym.py  TestPPO.py  TestProtocol.py  TestPyBulletEnv.py  TestPyBulletModel.py  TestYaml.cpp
Utils/: CMakeLists.txt  Clock.hpp  DartpThread.cpp  DartpThread.hpp  DataManager.cpp  DataManager.hpp  NeuralNetModel.cpp  NeuralNetModel.hpp  ParamHandler.cpp  ParamHandler.hpp  ThirdPartyUtilities.cpp  ThirdPartyUtilities.hpp  Utilities.cpp  Utilities.hpp  comm_udp.cpp  comm_udp.hpp  minjerk_one_dim.cpp  minjerk_one_dim.hpp  pseudo_inverse.cpp  pseudo_inverse.hpp
data_manager/: CMakeLists.txt  DataProtocol.h  DataSave.cpp  DataSave.h
messages/: CMakeLists.txt  draco.proto  draco_pnc.proto  draco_pybullet_sensors.proto  fixed_draco.proto  horizon_to_pnc.proto  pnc_to_horizon.proto
pnc/: CMakeLists.txt  control_architecture.hpp  humanoid_sensor_data.hpp  interface.hpp  interrupt_logic.hpp  state_machine.hpp
test/: CMakeLists.txt  dcm_planner_test.cpp  draco_interface_test.cpp  draco_kf_state_estimator_test.cpp  draco_meshcat_test.py  ezgripperGUI.py  hermite_curves_test.cpp  qp_test.cpp
utils/: CMakeLists.txt  clock.hpp  cubic_hermite_curve.cpp  cubic_hermite_curve.hpp  hermite_curve.cpp  hermite_curve.hpp  hermite_curve_vec.cpp  interpolation.cpp  interpolation.hpp  quintic_hermite_curve.cpp  util.cpp  util.hpp
(+5046 files in other folders)
