add_subdirectory(DracoPnC)
add_subdirectory(ScorpioPnC)
add_subdirectory(AtlasPnC)
add_subdirectory(ValkyriePnC)
add_subdirectory(WBC)
add_subdirectory(PlannerSet)
add_subdirectory(RobotSystem)
add_subdirectory(Filters)

file(GLOB pnc_headers "*.hpp")
install(FILES ${pnc_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/PnC")
