FILE(GLOB_RECURSE sources "*.cpp")
FILE(GLOB general_headers "General/*.hpp")
FILE(GLOB io_headers "IO/*.hpp")
FILE(GLOB math_headers "Math/*.hpp" "*.h")

if(NOT ZMQ_FOUND)
    list(REMOVE_ITEM sources ${CMAKE_CURRENT_SOURCE_DIR}/IO/ZmqUtilities.cpp)
    list(REMOVE_ITEM io_headers ${CMAKE_CURRENT_SOURCE_DIR}/IO/ZmqUtilities.hpp)
endif()

add_library(myUtils SHARED  ${sources})
target_link_libraries(myUtils myYaml)

find_package(Threads REQUIRED)
if(THREADS_HAVE_PTHREAD_ARG)
  target_compile_options(myUtils PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(myUtils "${CMAKE_THREAD_LIBS_INIT}")
endif()

install(TARGETS myUtils DESTINATION "${INSTALL_LIB_DIR}")
install(FILES ${general_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Utils/General")
install(FILES ${io_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Utils/IO")
install(FILES ${math_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Utils/Math")
